--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://brenno-calado.github.io/portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -8,17 +9,23 @@
     "@testing-library/user-event": "^12.8.3",
     "eslint-config-trybe-frontend": "^1.2.1",
     "eslint-config-trybe-fundamentals": "^1.1.0",
+    "lint": "^0.7.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "stylelint": "^13.13.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --no-inline-config -c .eslintrc.json . --ext .js,.jsx",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +51,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "gh-pages": "^3.1.0",
+    "stylelint": "^13.13.1",
+    "stylelint-order": "^4.1.0"
   }
 }
