--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brenno-calado.github.io/",
+  "homepage": "https://brenno-calado.github.io/portfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
