--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "homepage": "https://brenno-calado.github.io/portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
+  "engines": {
+    "npm": "7.x",
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
