--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "clipboard-copy": "^3.1.0",
     "eslint-config-trybe-frontend": "^1.2.1",
+    "flat": "^5.0.2",
     "history": "^4.7.2",
     "lint": "^0.7.0",
     "lodash": "^4.17.15",
