--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "/portfolio",
   "display": "standalone",
   "theme_color": "#cd5c5c",
   "background_color": "#f2fff2"
