--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "graphql-request": "^6.0.0",
-    "next": "13.3.4",
-    "postcss": "8.4.23",
+    "next": "^14.2.13",
+    "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intl": "^6.4.2",
