--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-intl": "^6.4.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
