--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "graphql-request": "^6.0.0",
+    "gray-matter": "^4.0.3",
     "next": "^14.2.13",
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-intl": "^6.4.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
