--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-intl": "^6.4.2",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
+    "rehype-stringify": "^10.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "unified": "^11.0.5"
   }
 }
