--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_HOST="http://localhost:3000"
+NEXT_PUBLIC_GA_MEASUREMENT_ID="your_google_analytics_measurement_id_here"
 GH_GRAPHQL_ENDPOINT="https://api.github.com/graphql"
 GH_TOKEN="your_github_graphql_token_here"
