--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.5.2",
     "react-intl": "^6.4.2",
     "rehype-stringify": "^10.0.1",
