--- a/package.json
+++ b/package.json
@@ -2,34 +2,42 @@
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
+  "description": "Personal portfolio website for Brenno Calado",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@types/node": "18.16.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "25.0.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
-    "graphql-request": "^6.0.0",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.1",
+    "graphql-request": "^6.1.0",
     "gray-matter": "^4.0.3",
-    "next": "^14.2.13",
-    "postcss": "^8.4.47",
-    "react": "18.2.0",
+    "next": "^14.2.35",
+    "postcss": "^8.5.6",
+    "react": "18.3.0",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
-    "react-hot-toast": "^2.5.2",
-    "react-intl": "^6.4.2",
+    "react-hot-toast": "^2.6.0",
+    "react-intl": "^6.8.9",
     "rehype-stringify": "^10.0.1",
     "remark-breaks": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
+    "tailwindcss": "^4.1.18",
+    "typescript": "5.9.3",
     "unified": "^11.0.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "husky": "^9.1.7"
   }
 }
