--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "25.0.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.1",
-    "graphql-request": "^6.1.0",
+    "graphql-request": "7.4.0",
     "gray-matter": "^4.0.3",
-    "next": "^14.2.35",
-    "postcss": "^8.5.6",
-    "react": "18.3.0",
-    "react-dom": "18.2.0",
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.6.0",
-    "react-intl": "^6.8.9",
+    "react-intl": "8.0.7",
     "rehype-stringify": "^10.0.1",
     "remark-breaks": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "tailwindcss": "^4.1.18",
     "typescript": "5.9.3",
     "unified": "^11.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
-    "husky": "^9.1.7"
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.1",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
